--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,4 +8,17 @@ on:
   schedule:
     - cron: '15 6 * * 0'
   workflow_dispatch:
-    
+    jobs:
+      Build:
+        runs-on: ubuntu-latest
+        steps:
+          - run: |  
+            echo "🎉 The job was triggered by event: ${{ github.event_name }}"
+            uses: actions/checkout@v4
+
+          - name: List files in the repository
+          - run: |
+              echo " The repository ${{ github.repositiory }} contains the following files: "
+              tree
+
+        
